sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value j
    j=i
    ^AlgInsertionSort:8: error: not found: value j
    while(j>0 and j-1<j){
          ^AlgInsertionSort:8: error: not found: value j
    while(j>0 and j-1<j){
                  ^AlgInsertionSort:8: error: not found: value j
    while(j>0 and j-1<j){
                      ^AlgInsertionSort:9: error: not found: value j
      echange(j,j-1)
              ^AlgInsertionSort:9: error: not found: value j
      echange(j,j-1)
                ^AlgInsertionSort:10: error: not found: value j
      j=j-1
      ^