sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int=getNombreValeurs()
  var i:Int=0
  var v:Int=0
  for (i <- 1 to lgr-1){
    j=i
    while(j>0 and j-1<j){
      echange(j,j-1)
      j=j-1
    }
  
      if(i-1>v){
        echange(i-1,i)
      }
    }
  }
